--- a/scripts/custom/etc/lightdm/lightdm.conf
+++ b/scripts/custom/etc/lightdm/lightdm.conf
@@ -62,7 +62,7 @@
 # xdmcp-key = Authentication key to use for XDM-AUTHENTICATION-1 (stored in keys.conf)
 # unity-compositor-command = Unity compositor command to run (can also contain arguments e.g. unity-system-compositor -special-option)
 # unity-compositor-timeout = Number of seconds to wait for compositor to start
-greeter-session = web-greeter
+greeter-session = slick-greeter
 # greeter-hide-users = True to hide the user list
 # greeter-allow-guest = True if the greeter should show a guest login option
 # greeter-show-manual-login = True if the greeter should offer a manual login option
@@ -105,7 +105,7 @@ greeter-session = web-greeter
 #xdmcp-key=
 #unity-compositor-command=unity-system-compositor
 #unity-compositor-timeout=60
-greeter-session=web-greeter
+greeter-session=slick-greeter
 #greeter-hide-users=false
 #greeter-allow-guest=true
 #greeter-show-manual-login=false
